--- a/BlokusGUI/App.config
+++ b/BlokusGUI/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<appSettings>
+		<add key="BGM_PATH" value="D:\\CODE\\C++\\BlokusGUI\\BlokusGUI\\bgm.wav" />
+	</appSettings>
 </configuration>
