--- a/BlokusGUI/App.config
+++ b/BlokusGUI/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<appSettings>
-		<add key="BGM_PATH" value="C:\\Users\\sunjiawei\\source\\repos\\BlokusGUI\\BlokusGUI\\bgm.wav" />
+		<add key="BGM_PATH" value="" />
+		<add key="backup" value="C:\\Users\\sunjiawei\\source\\repos\\BlokusGUI\\BlokusGUI\\bgm.wav" />
 	</appSettings>
 </configuration>
